--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welkom bij de GitHub Classroom Opdracht!</h1>
+    <h1>Welkom bij de GitHub Classroom Opdracht!aaaaaaaaar</h1>
 	<!-- Voeg hier een paragraaf toe. -->
     <table>
         <tr>
@@ -19,3 +19,4 @@
     <!-- Student B zal hier een ongeordende lijst toevoegen -->
 </body>
 </html>
+
